init adding navigation style and images

--- a/homeworks/projects/html-css-snap/index.html
+++ b/homeworks/projects/html-css-snap/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Snap</title>
   </head>
   <body>
     <div>
         <nav>
-          <img src="../jfdzr8-project-html-css/snap/images/logo.svg" alt="Snap" />
+          <img src="./images/logo.svg" alt="Snap" />
         <ul>
           <li><a href="#Features">Features</a></li>
           <li><a href="#Company">Company</a></li>
@@ -29,17 +30,17 @@
             <p>Get your team in sync. no matter your location. Streamline processes, create team rituals, and watch productivity soar.</p>
             <button type="button">Learn more</button>
             <div>
-                <img src="../jfdzr8-project-html-css/snap/images/client-databiz.svg" alt="Databiz" />
-                <img src="../jfdzr8-project-html-css/snap/images/client-audiophile.svg" alt="audiophile" />
-                <img src="../jfdzr8-project-html-css/snap/images/client-meet.svg" alt="meet" />
-                <img src="../jfdzr8-project-html-css/snap/images/client-maker.svg" alt="maker" />
+                <img src="./images/client-databiz.svg" alt="Databiz" />
+                <img src="./images/client-audiophile.svg" alt="audiophile" />
+                <img src="./images/client-meet.svg" alt="meet" />
+                <img src="./images/client-maker.svg" alt="maker" />
             </div>
             
         </section>
 
         <section>
             
-            <img src="../jfdzr8-project-html-css/snap/images/image-hero-desktop.png" />
+            <img src="./images/image-hero-desktop.png" />
 
         </section>
     </main>
