--- a/homeworks/projects/html-css-snap/index.html
+++ b/homeworks/projects/html-css-snap/index.html
@@ -7,44 +7,46 @@
     <link rel="stylesheet" href="style.css" />
     <title>Snap</title>
   </head>
+
   <body>
-    <div>
-        <nav>
-          <img src="./images/logo.svg" alt="Snap" />
+    <header>
+      <nav class="main-navigation">
+        <img src="./images/logo.svg" alt="Snap" />
         <ul>
-          <li><a href="#Features">Features</a></li>
-          <li><a href="#Company">Company</a></li>
+          <li><a href="#Features" class="sub-menu">Features</a></li>
+          <li><a href="#Company" class="sub-menu">Company</a></li>
           <li><a href="#Careers">Careers</a></li>
           <li><a href="#About">About</a></li>
         </ul>
       </nav>
       <div>
         <a href="">Login</a>
-      <a href="">Register</a>
-    </div>
+        <a href="" id="btn-register">Register</a>
+      </div>
     </header>
 
     <main>
-        <section>
-            <h1>Make remote work</h1>
-            <p>Get your team in sync. no matter your location. Streamline processes, create team rituals, and watch productivity soar.</p>
-            <button type="button">Learn more</button>
-            <div>
-                <img src="./images/client-databiz.svg" alt="Databiz" />
-                <img src="./images/client-audiophile.svg" alt="audiophile" />
-                <img src="./images/client-meet.svg" alt="meet" />
-                <img src="./images/client-maker.svg" alt="maker" />
-            </div>
-            
-        </section>
+      <section class="left-actions">
+        <h1>
+          Make<br />
+          remote work
+        </h1>
+        <p>
+          Get your team in sync. no matter your location.Streamline processes,
+          create team rituals, and watch productivity soar.
+        </p>
+        <button type="button">Learn more</button>
+        <div class="img-bottom">
+          <img src="./images/client-databiz.svg" alt="Databiz" />
+          <img src="./images/client-audiophile.svg" alt="audiophile" />
+          <img src="./images/client-meet.svg" alt="meet" />
+          <img src="./images/client-maker.svg" alt="maker" />
+        </div>
+      </section>
 
-        <section>
-            
-            <img src="./images/image-hero-desktop.png" />
-
-        </section>
+      <section class="right-img">
+        <img src="./images/image-hero-desktop.png" class="img2" />
+      </section>
     </main>
-
-
   </body>
 </html>
